AI/envoyfilter_cbc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: force-downgrade-httpbin-server
  namespace: default
spec:
  workloadSelector:
    labels:
      app: httpbin
  configPatches:
  - applyTo: FILTER_CHAIN
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          destinationPort: 8080
          transportProtocol: tls
    patch:
      operation: MERGE
      value:
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
            common_tls_context:
              tls_params:
                tls_maximum_protocol_version: TLSv1_2
                tls_minimum_protocol_version: TLSv1_2
                cipher_suites:
                - "ECDHE-ECDSA-AES128-SHA256"
                - "ECDHE-ECDSA-AES256-SHA384"
                - "ECDHE-RSA-AES128-SHA256"
                - "ECDHE-RSA-AES256-SHA384"
                - "AES128-SHA256"
                - "AES256-SHA256"
